
    Update to rra-c-util 3.8:

    * Add notices to all files copied over from rra-c-util.
    * Fix warnings when reporting memory allocation failure in messages.c.
    * Include strings.h for additional POSIX functions where found.
    * Avoid using krb5-config if --with-{krb5,gssapi}-{include,lib} given.
    * Fix use of long long in portable/mkstemp.c.

WebAuth 3.7.4 (2011-05-11)

    WebAuth now supports a new Apache configuration directive,
    WebAuthOptional, which can be used in directories and .htaccess files.
    If set to on, unauthenticated users are not redirected to WebLogin and
    are instead allowed access to the protected resource, but without any
    REMOTE_USER or related environment variables set.  However, if the
    user was previously authenticated to that server, their authentication
    information will be present in the environment as normal.  This is
    intended for use with dynamic content, such as embedded PHP or CGI
    scripts, that will inspect REMOTE_USER and decide what content to show
    based on the authentication status.  Normally, unauthenticated users
    would also be shown a login link to a URL protected by WebAuth without
    this directive so that they can authenticate if desired.  This feature
    is sometimes referred to as "passive authentication" or "lazy
    sessions."  Based on work by niklas.

    Previous versions of WebLogin interpreted a "message stream modified"
    error on password change as a failure of strength checking because
    that error was incorrectly returned by MIT Kerberos for password
    strength checking errors with a Heimdal KDC.  This turned out to be a
    bug in MIT Kerberos, which is now avoided by using a different library
    API call that doesn't have that bug.  This workaround has now been
    removed, so the error reporting from WebLogin on password change will
    now be more accurate.

    Disable TLS certificate verification in WebLogin if the WebKDC URL is