@@ -85,6 +85,11 @@ WebAuth 4.0.0 (unreleased)
     * Avoid using krb5-config if --with-{krb5,gssapi}-{include,lib} given.
     * Fix use of long long in portable/mkstemp.c.
 
+    Update to C TAP Harness 1.8:
+
+    * Add bmalloc, bcalloc, brealloc, and bstrdup TAP library functions.
+    * Fix runtests to honor -s even if BUILD and -b aren't given.
+
 WebAuth 3.7.4 (2011-05-11)
 
     WebAuth now supports a new Apache configuration directive,
